[package]
name = "thread_map"
version = "1.0.2"
edition = "2024"
license = "MIT"
description = "Types that are simple and easy-to-use alternatives to the `std::thread_local` macro."
repository = "https://github.com/pvillela/rust-thread-map/tree/main"
documentation = "https://docs.rs/thread_map/latest/thread_map/"
readme = "README.md"
keywords = ["thread-local"]
categories = ["concurrency"]
exclude = ["benches/targets", "CHANGELOG.md", "*.sh", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bench_diff = "1.0.3"
thread_local = "1"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "tmu_tmx_bench"
harness = false

[[bench]]
name = "tmu_tlc_bench"
harness = false
